--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -1,319 +1,25 @@
-<p class="titre">Les Languages/Les Frameworks</p>
+<div class="skills-section">
+  <h3 class="skills-heading">Stack technique</h3>
+  <div class="skills-grid">
+    <article class="skill-card" *ngFor="let skill of skills">
+      <img class="skill-logo" [src]="skill.logo" [alt]="skill.name">
+      <div class="skill-copy">
+        <h4>{{ skill.name }}</h4>
+        <p>{{ skill.description }}</p>
+      </div>
+    </article>
+  </div>
+</div>
 
-<mat-grid-list cols="5" >
-  <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/800px-Python-logo-notext.svg.png">
-    </span>
-  </div>
-  <div>
-    <span>
-
-      <p class="explication"><strong>Python</strong><br>Presques tout mes projets sont controllé en python, que ce soit du traitement de fichiers, de la gestion de base de donnée, de la récupération d'API ou encore de coder des robots avec CircuitPython Sur RaspBerry Pi Pico, je trouve que c'est un language presque universelle.</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>HTML</strong><br>L'HTML est mon language préféré pour créer des dashboard, il est simple et très manipulable, grace à lui, chaques scripts python que je développe, obtient on résutat en un beau dashboard fait en HTML/CSS</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://i.ibb.co/3NgZMcg/Sans-dsqdsqd2.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>CSS</strong><br>Le CSS, très utile pour ce qui est d'aménager un fichier HTML afin de le rendre haut en couleur, je l'utilise dans mes dashboard pour les rendres plus beau.</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-      <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/800px-Angular_full_color_logo.svg.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>Angular</strong><br>L'Angular est un framework que j'utilise pour dynamiser les sites internet que je suis amené à coder, d'ailleurs, avez-vous remarqué que ce site utilise Angular ?</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://styles.redditmedia.com/t5_2v6gg/styles/communityIcon_4w7vh6c21f871.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>TypeScrpt</strong><br>J'utilise le Typescript avec Angular pour le coté client de mes application </p>
-    </span>
-  </div>
-</button>
-
-  </mat-grid-tile>
-
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://humancoders-formations.s3.amazonaws.com/uploads/course/logo/14/formation-node-js.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>Javascript</strong><br>J'utilise le Javascript avec Angular pour le coté serveur de mes application</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://blog.cellenza.com/wp-content/uploads/2017/01/PowerShell_5.0_icon.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>Powershell</strong><br>J'utilise le Powershell afin de réaliser des scripts pour améliorer le confort des utilisateurs, faire des dashborads, installer des applications, ...</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://d31ezp3r8jwmks.cloudfront.net/nll72fi399f3l14px0cvoyr2y69r">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>Shell</strong><br>J'utilise le Shell quand il est d'Automatiser les processus fait de base par l'utilisateur, comme l'installation de logiciel, je l'utilise aussi avec Chocolatey par exemple pour ajouter des arguments en gardant le coté "arrière plan" de l'installation.</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://assets-global.website-files.com/60ec34540d013784844d2ee2/63ada2a83ca6981ff3e7c391_sql2.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>SQL</strong><br>J'utilise le SQL pour réaliser des bases de donnée, je l'utilise pour stocker les informations des dashboards</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://i.ibb.co/D41ysgm/logo-c-1.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>C</strong><br>J'ai commencé la programmation en BTS avec le C et le C++</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1200px-ISO_C%2B%2B_Logo.svg.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>C++</strong><br>J'ai commencé la programmation en BTS avec le C et le C++</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-      <mat-grid-tile>
-    <button>
-  <div>
-    <span>
-      <img class="logoentreprise" src="https://styles.redditmedia.com/t5_2s0xo/styles/communityIcon_btdkmklrsxs81.png">
-    </span>
-  </div>
-  <div>
-    <span>
-      <p class="explication"><strong>C#</strong><br>Mon premier gros projet à été réalisé en C# avec Windows Form, réaliser une porte automatique avec une authentification Active Directory</p>
-    </span>
-  </div>
-</button>
-  </mat-grid-tile>
-
-</mat-grid-list>
-
-
-
-<p class="titre">Les systèmes d'exploitations</p>
-<mat-grid-list cols="5" >
-  <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://c.clc2l.com/t/w/i/windows-11-JJBp_C.png">
-        </span>
+<div class="skills-section">
+  <h3 class="skills-heading">Systèmes d'exploitation maîtrisés</h3>
+  <div class="skills-grid skills-grid--compact">
+    <article class="skill-card" *ngFor="let system of systems">
+      <img class="skill-logo" [src]="system.logo" [alt]="system.name">
+      <div class="skill-copy">
+        <h4>{{ system.name }}</h4>
+        <p>{{ system.description }}</p>
       </div>
-      <div>
-        <span>
-
-          <p class="explication"><strong>Windows</strong><br>Pour système d'exploitation le plus utilisé par les particuliers et les entreprises, j'y ai déployé des scripts afin d'améliorer le confort des utilisateurs ou des automatisations de dashboard</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/1200px-Tux.svg.png">
-        </span>
-      </div>
-      <div>
-        <span>
-
-          <p class="explication"><strong>Linux</strong><br>Lorsque je n'utilise pas Windows, j'utilise Linux, j'aime bien la distribution Ubuntu, d'ailleurs, lorsque je vends des ordinateurs que je récupère, je les passent toujours sous Ubuntu afin que les utilisateurs (souvents des personnes agées) puissent le manier correctement. De plus, je suis actuellement en train de coder un Jarvis qui tournerais dessus !</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/22/MacOS_logo_%282017%29.svg/2060px-MacOS_logo_%282017%29.svg.png">
-        </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>Mac OS</strong><br>J'y ai déployé des scripts d'automatisations afin d'amélioré le confort utilisateur</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-</mat-grid-list>
-
-<p class="titre">Les Outils</p>
-<mat-grid-list cols="5" >
-  <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg">
-        </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>GitHub</strong><br>J'utilise GitHub dans le cadre professionel, il est interessant de sauvegarder son code, mais plus interressant d'avoir un bon suivi avec le Commit et une bonne organisation avec les différentes Branches</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://5.imimg.com/data5/SELLER/Default/2022/7/FT/WW/IM/7756102/oracle-database-enterprise-edition-license-1-processor.png">
-        </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>Oracle</strong><br>J'ai utilisé Oracle dans le cas de Mises en Situations Professionel (MSPR) bien que je n'ai pas approfondi le sujet, j'ai tout de même des experiences</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-      <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://media.trustradius.com/product-logos/pr/1O/0KQHC3P7NGDW.PNG">
-        </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>N-Able</strong><br>N-Able est une suite logiciel qui comporte du monitoring, de la prise en main à distance, de l'automatisation,... J'y ai été support technique deurant deux ans lors de mon experience à Bordeaux</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-  <mat-grid-tile>
-    <button>
-      <div>
-        <span>
-          <img class="logoentreprise" src="https://www.easydesk.fr/wp-content/uploads/2017/10/logo_ivanti.gif">
-        </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>Ivanti Landesk</strong><br>Logiciels permettant l'accès à des données sur les postes de travail, leurs conformitée, pouvant être récupéré sous formes de requettes SQL, ce qui permet de réaliser des dashboard ou des rapport.</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-</mat-grid-list>
-
-<p class="titre">Les Editeurs</p>
-
-<mat-grid-list cols="5" >
-  <mat-grid-tile>
-  <button>
-    <div>
-      <span>
-        <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/en/thumb/0/08/JetBrains_beam_logo.svg/1200px-JetBrains_beam_logo.svg.png">
-      </span>
-    </div>
-    <div>
-      <span>
-        <p class="explication"><strong>JetBrains</strong><br>La suite d'IDE de JetBrains est ma suite préférée pour coder</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-    <mat-grid-tile>
-  <button>
-    <div>
-      <span>
-        <img class="logoentreprise" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Visual_Studio_Icon_2019.svg/1200px-Visual_Studio_Icon_2019.svg.png">
-      </span>
-      </div>
-      <div>
-        <span>
-          <p class="explication"><strong>Visual Studio (Code)</strong><br>J'utilise aussi Visual Studio et Visual Studio Code</p>
-        </span>
-      </div>
-    </button>
-  </mat-grid-tile>
-</mat-grid-list>
+    </article>
+  </div>
+</div>
