--- a/src/app/defispersonnel/defispersonnel.component.css
+++ b/src/app/defispersonnel/defispersonnel.component.css
@@ -1,17 +1,37 @@
-.grostitre{
-  text-align: center;
-  font-family: Roboto, Helvetica Neue, sans-serif;
-  font-weight: bold;
-  font-size: 150%;
-  color:white;
-}
-.explication{
-  text-align: center;
-  font-family: Roboto, Helvetica Neue, sans-serif;
-  font-size: 120%;
-  color:white;
-  margin: 0 auto;
-  width: 80%;
-  max-width: 80%;
+:host {
+  display: block;
 }
 
+.challenge-intro {
+  display: grid;
+  gap: 16px;
+  margin-bottom: 32px;
+}
+
+.challenge-intro h3 {
+  font-size: clamp(22px, 3vw, 28px);
+  font-weight: 600;
+}
+
+.challenge-intro p {
+  margin: 0;
+  max-width: 820px;
+}
+
+mat-tab-group {
+  width: 100%;
+}
+
+mat-tab-group ::ng-deep .mat-mdc-tab-body-content {
+  padding: clamp(16px, 3vw, 32px) clamp(8px, 2vw, 16px);
+}
+
+.challenge-tab {
+  display: grid;
+  gap: 24px;
+}
+
+.challenge-tab p {
+  margin: 0;
+  font-size: 16px;
+}
