--- a/src/app/experiencepro/experiencepro.component.html
+++ b/src/app/experiencepro/experiencepro.component.html
@@ -1,50 +1,43 @@
 <mat-tab-group>
-  <mat-tab label="2021/2022 : Avem Groupe à Rennes" class="titre">
-    <p class="explication">J'aimerais vous parler d'une période que j'ai traversé lors de ma license DevOps de 2021/2022 à Rennes :
-
-      J'ai travaillé à AVEM GROUPE, une entreprise vendant des solutions monétiques telles que des terminales de payements, j'y ai été en tant qu'administrateur bureautique.
-
-      J'y été en charge de créer des packages d'installation à déployer sur un parc de près de 3 000 postes de travails, que ce soit de l'installation, ou de la mise à jour d'application.
-
-      Cette entreprise m'a permis d'approfondir mes connaissances en PowerShell, mais de plus, elle m'a permis de commencer à développer en Node.js avec le Framework Angular, et d'utiliser des requêtes SQL grâce à deux projets. Le premier est de créer une base de données permettant de remplacer un fichier Excel et de faire une application WEB autour de tout ça, le deuxième projet consiste à créer un DashBoard à partir d'une base de données déjà existante.
-
-      Cette expérience m'a permis de comprendre les grands groupes, l'importance d'un travail sérieux, et les différents effets encourus si le projet n'est pas complètement étudié. C'est une fourmillière ou chaque personnes a un role essentiel !</p>
-
-      <div>  <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/nef9.png"></div>
-
-  </mat-tab>
-  <mat-tab label="2019/2021 : Watsoft Distribution à Bordeaux" class="titre">
+  <mat-tab label="2021/2022 · Avem Groupe, Rennes" class="titre">
     <p class="explication">
-      J'aimerais vous parler aussi d'une période qui à concrétiser ma passion pour l'informatique et le développement :
-
-      J'ai donc travaillé au cours de ces deux années à Watsoft, cette entreprise de distribution de logiciels située à Pessac (du côté de Bordeaux) en tant que technicien support en hot-line pour professionnel et en tant que technicien interne.
-
-      J'ai eu la possibilité de rencontrer des professionnels, des particuliers, j'ai pu aussi résoudre des problèmes concernant des logiciels tels que N-Able (console de monitoring), ISL (prise en mains à distance), MDaemon (serveur de mail), et bien plus encore.
-
-      J'ai aussi eu la possibilité de résoudre des problèmes de hardware, de software, d'installer des postes en interne et de gérer le déploiement du télétravail dans cette entreprise qui comptait à l'époque une trentaine de personnes.
-
-      C'est ici que j'ai pu apprendre divers langages de programmation, ce n'est pas une entreprise de développement, mais j'y ai codé des scripts PowerShell et Bash qui seront déployés sur les postes de travail des clients.
-
-      J'ai aussi pu faire un projet (demandé par l'école) de développement d'application. Ici, il fallait coder un accès physique au serveur se basant sur une authentification Active Directory, l'application a été codée en C# avec la library Windows form et afin d'automatiser le tout, j'y ai aussi inclus du PowerShell. On s'enregistrait sur une application Desktop en C#, qui nous ouvrait la porte avec un petit script Python sur un Raspberry Pi, puis, la porte se refermait.
-
-      Cette seconde expérience m'a beaucoup plus aussi ! Elle m'a permis d'avoir une expérience plus concrète, ce qui m'a permis d'avoir de bonnes bases dans le développement.
+      Au sein du groupe AVEM, acteur majeur des solutions monétiques, j'ai évolué comme administrateur bureautique. J'y ai conçu
+      des packages de déploiement pour un parc de plus de 3 000 postes, orchestré des installations et des mises à jour et posé les
+      bases d'applications Angular appuyées par des requêtes SQL. Une immersion dans un grand groupe qui m'a appris la rigueur
+      collective.
     </p>
-    <div>  <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/q9j9.png"></div>
+    <div class="experience-visual">
+      <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/nef9.png" alt="Logo Avem Groupe">
+    </div>
   </mat-tab>
-  <mat-tab label="2016 : Delorme Informatique à Vimoutier" class="titre">
+
+  <mat-tab label="2019/2021 · Watsoft Distribution, Bordeaux" class="titre">
     <p class="explication">
-      Ceci à été première expérience dans le monde de l'informatique, donc j'aimerais vous parler de mon initiation dans cet univers : <br>
-
-      J'ai donc travaillé au cours de ma 3e année de collège à l'entreprise Delorme Informatique pour une periode de stage, une entreprise basée en Normandie qui vend et répare des équipements informatique (du téléphone, à l'ordinateur et de l'ordinateur à l'imprimante).
-
-      Ce qui m'a plus dans cette semaine de stage, c'est le fait d'explorer un problème et d'y trouver une solution. J'ai pu notamment (avec l'aide du gérant) remplacer un écran d'IPhone. Cette activité m'a particulièrement plu, et m'a fait encore plus aimer l'informatique en général.
+      Deux années intenses à Pessac comme technicien support et technicien interne. Entre assistance logicielle (N-Able, ISL,
+      MDaemon…) et projets d'automatisation en PowerShell ou Python, j'ai développé des outils, déployé le télétravail et conçu une
+      application de contrôle d'accès en C# pilotant un Raspberry Pi. Une expérience formatrice au contact direct des utilisateurs.
     </p>
-    <div>  <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/vfl7.png"></div>
+    <div class="experience-visual">
+      <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/q9j9.png" alt="Logo Watsoft">
+    </div>
   </mat-tab>
-  <mat-tab label="Mes autres experiences" class="titre">
+
+  <mat-tab label="2016 · Delorme Informatique, Vimoutier" class="titre">
     <p class="explication">
-      J'ai réalisé divers emplois dernièrement, comme employé de mise en rayon en remplacement à E.Leclerc de l'Aigle car, même si j'ai déjà des experiences me permettant d'avoir une relation client avec Watsoft, j'ai eu envie d'avoir un contact plus proche avec les utilisateurs, le fait de leurs parler, répondre à leurs attente "en direct", "face à face", car cela a pu améliorer mon contact client. <br> <br>
-      J'ai aussi été surveillant en remplacement au collège Molière de l'Aigle, le but ici était de voir "une clientele" plus dur, car effectivement, ce collège étant l'un des plus dur de la zone, le fait d'avoir des enfants à problèmes constitue un travail plus dur qui m'a permis de me forger un meilleur caractère !
-      </p>
+      Mon premier pas professionnel : une semaine de stage dans une boutique informatique normande. Dépannage matériel,
+      remplacement d'écran d'iPhone et découverte de la relation client ont confirmé ma passion pour l'informatique et la recherche
+      de solutions.
+    </p>
+    <div class="experience-visual">
+      <img class="imageentreprise" src="https://www.zupimages.net/up/22/19/vfl7.png" alt="Logo Delorme Informatique">
+    </div>
+  </mat-tab>
+
+  <mat-tab label="Autres expériences" class="titre">
+    <p class="explication">
+      En parallèle, j'ai tenu des postes en grande distribution (E.Leclerc L'Aigle) et en milieu scolaire (collège Molière) pour
+      cultiver le sens du service et la gestion de situations complexes. Des expériences humaines riches qui nourrissent ma vision
+      du travail en équipe.
+    </p>
   </mat-tab>
 </mat-tab-group>
