--- a/src/app/formationscolaire/formationscolaire.component.css
+++ b/src/app/formationscolaire/formationscolaire.component.css
@@ -1,16 +1,32 @@
-.explication{
-  text-align: center;
-  font-family: Roboto, Helvetica Neue, sans-serif;
-  font-size: 120%;
-  color:white;
-  margin: 0 auto;
-  width: 80%;
-  max-width: 80%;
+:host {
+  display: block;
 }
-div {
+
+mat-tab-group {
+  width: 100%;
+}
+
+mat-tab-group ::ng-deep .mat-mdc-tab-body-content {
+  padding: clamp(16px, 3vw, 32px) clamp(8px, 2vw, 16px);
+}
+
+.explication {
+  text-align: left;
+  font-size: 16px;
+  margin: 0 auto 24px;
+  max-width: 880px;
+}
+
+.formation-visual {
   display: flex;
   justify-content: center;
+  margin-bottom: 16px;
 }
-.imageentreprise{
-  width: 70vh;
+
+.imageentreprise {
+  width: min(60vh, 320px);
+  border-radius: 18px;
+  box-shadow: 0 24px 48px rgba(5, 8, 28, 0.45);
+  border: 1px solid rgba(255, 255, 255, 0.08);
+  object-fit: cover;
 }
