--- a/src/app/formationscolaire/formationscolaire.component.html
+++ b/src/app/formationscolaire/formationscolaire.component.html
@@ -1,22 +1,24 @@
 <mat-tab-group>
-  <mat-tab label="2021/2022 : Formation DevOps à Rennes" class="titre">
+  <mat-tab label="2021/2022 · Formation DevOps, Rennes" class="titre">
     <p class="explication">
-      J'ai été admis à l'EPSI pour les années 2021/2022, une école d'ingénierie à Rennes sur le Campus de The Land. C'est dans cette école, ayant ouvert l'année dernière son campus à Rennes (Septembre 2020), que j'ai pue avoir mes premiers projets professionnalisant
-
-      En effet, ces projets appelés MSPR (Mises en Situations PRprofessionnels) sont des projets de développement suivant une approche professionnels, j'ai pue y travailler sur Jenkins, Windows Server, Oracle, Python, JavaScript, PowerShell, HTML/CSS.
-
-      En plus, grâce au formation, j'ai pue apprendre et pratiquer des méthodes de gestion de projets tels de l'Agile, le Cycle en V,...<br>
-      Je n'ai pas eu le diplome malheureusement, mais je suis prêt à retenter sur Caen!
+      Admis à l'EPSI Rennes, j'ai plongé dans l'univers DevOps via des mises en situation professionnelles (MSPR) mêlant Jenkins,
+      Windows Server, Oracle ou encore des stacks Python/JavaScript. Cette année intense m'a familiarisé avec les méthodes Agile et
+      Cycle en V et m'a permis de consolider mes compétences techniques malgré l'absence de diplôme final.
     </p>
-      <div>  <img class="imageentreprise" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F591463959%2F493801398719%2F1%2Foriginal.20230906-143634?h=230&w=460&auto=format%2Ccompress&q=75&sharp=10&rect=7%2C0%2C914%2C457&s=c2ff38dadbd645525d09fa4ae2e8e31e"></div>
-
+    <div class="formation-visual">
+      <img class="imageentreprise" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F591463959%2F493801398719%2F1%2Foriginal.20230906-143634?h=230&w=460&auto=format%2Ccompress&q=75&sharp=10&rect=7%2C0%2C914%2C457&s=c2ff38dadbd645525d09fa4ae2e8e31e" alt="Campus EPSI Rennes">
+    </div>
   </mat-tab>
-  <mat-tab label="2021/2022 : BTS Système Numérique option Informatique et Réseaux à Bordeaux" class="titre">
-    <p class="explication">J'ai été admis il y a trois ans au CFA Saintonge Formation à Bordeaux. Dans cette section qui venait d'ouvrir, c'est ici que j'ai pue réellement utiliser l'informatique et la programmation. j'ai pue démonter/remonter des ordinateurs (et en récupérer des vieux pour en faire des serveurs qui m'ont été très utiles par ailleurs). C'est ici que j'ai pue réaliser mon premier projet en développement :
 
-                           Le SHEM, qui était une application suivant l'architecture Client/Serveur, elle était constituée d'une application cliente qui effectuait des requêtes MySQL vers un serveur SQL, le tout était codé en C# Windows Form, on devait remplir un formulaire, le programme vérifiait les valeurs puis créait une requête SQL qui s'exécutait sur le serveur. Ce projet m'a permis d'avoir mes premières bases.
-
-                           Ces deux ans d'écoles m'ont aussi permis d'avoir aussi de bonnes bases en réseau et en architecture.</p>
-    <div>  <img class="imageentreprise" src="https://img.gothru.org/pano_zoom.php?p=31328082&i=283/372676844121003733/20210122092111.f15JSA.jpg&w=1200&h=630&a=40&y=347.41&v=5"></div>
+  <mat-tab label="2019/2021 · BTS SN IR, Bordeaux" class="titre">
+    <p class="explication">
+      Au CFA Saintonge Formation, j'ai découvert les bases solides du réseau et de l'architecture systèmes. J'y ai mené mon
+      premier projet applicatif : le SHEM, une solution client/serveur en C# Windows Forms interrogeant une base MySQL. Une période
+      où j'ai également démonté et remonté des machines, transformé de vieux postes en serveurs et posé les premières briques de ma
+      culture DevOps.
+    </p>
+    <div class="formation-visual">
+      <img class="imageentreprise" src="https://img.gothru.org/pano_zoom.php?p=31328082&i=283/372676844121003733/20210122092111.f15JSA.jpg&w=1200&h=630&a=40&y=347.41&v=5" alt="CFA Saintonge Formation">
+    </div>
   </mat-tab>
 </mat-tab-group>
